refactor: remake error validation moving validation logic to actual types
- Created Validated interface and implement most of datatypes with it, refactor error checking
code
- Create separate datatype implementing Validated to incorporate the same approach for error
validation
- Exclude postgresql system tables/columns from being queries or used anyhow.